--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Home</title>
+<title>尙德</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!--jQuery(necessary for Bootstrap's JavaScript plugins)-->
 <script src="js/jquery-1.11.0.min.js"></script>
@@ -11,8 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Luxury Watches Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -23,52 +22,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery.easydropdown.js"></script>			
 </head>
 <body> 
-	<!--top-header-->
-	<!-- <div class="top-header">
-		<div class="container">
-			<div class="top-header-main">
-				<div class="col-md-6 top-header-left">
-					<div class="drop">
-						<div class="box">
-							<select tabindex="4" class="dropdown drop">
-								<option value="" class="label">Dollar :</option>
-								<option value="1">Dollar</option>
-								<option value="2">Euro</option>
-							</select>
-						</div>
-						<div class="box1">
-							<select tabindex="4" class="dropdown">
-								<option value="" class="label">English :</option>
-								<option value="1">English</option>
-								<option value="2">French</option>
-								<option value="3">German</option>
-							</select>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-md-6 top-header-left">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							 <div class="total">
-								<span class="simpleCart_total"></span></div>
-								<img src="images/cart-1.png" alt="" />
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div> -->
-	<!--top-header-->
-	<!--start-logo-->
-	<!-- <div class="logo">
-		<a href="index.html"><h1>尙德</h1></a>
-	</div> -->
-	<!--start-logo-->
-	<!--bottom-header-->
 	<div class="header-bottom">
 		<div class="container">
 			<div class="header">
@@ -79,133 +32,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li class="active"><a href="index.html">首页</a></li>
 
 						<li class="grid"><a href="about.html">关于我们</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>		
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products.html">样板工程</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>品牌</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products-2.html">产品</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="News.html">资讯</a>
 						</li>
@@ -215,12 +45,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<!-- <div class="col-md-3 header-right"> 
-				<div class="search-bar">
-					<input type="text" value="Search" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search';}">
-					<input type="submit" value="">
-				</div>
-			</div> -->
 			<div class="clearfix"> </div>
 			</div>
 		</div>
@@ -229,7 +53,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--banner-starts-->
 	<div class="bnr" id="home">
 		<div  id="top" class="callbacks_container">
-
 			<ul class="rslides" id="slider4">
 			    <li>
 					<div class="banner">
@@ -263,22 +86,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 				</li>
-				<!-- <li>
-					<div class="banner3">
-						<div class="ban-box" style="width:36%;height:35%;position: absolute;top:20%;left:5%">
-								<h2 class="ban" style="color:#000;padding-top:3%;
-							padding-left:6%">品牌理念：尙至若水  德行天下</h2>
-								<h2 class="ban" style="color:#000;padding-top:3%;
-							padding-left:6%">公司理念：智电整合 极致体现</h2>
-						</div>
-					</div>
-				</li> -->
 			</ul>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<!--banner-ends--> 
-    
+	<!--banner-ends-->    
 	<!--Slider-Starts-Here-->
 				<script src="js/responsiveslides.min.js"></script>
 			 <script>
@@ -303,7 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  </script>
 			<!--End-slider-script-->
 	<!--about-starts-->
-    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站模板</a></div>
+    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站</a></div>
 	<div class="about"> 
 		<div class="container">
 			<div class="about-top grid-1">
@@ -312,7 +124,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img class="img-responsive" src="images/z1.jpg" alt=""/>
 						<figcaption>
 							<h2>智能家居</h2>
-							<!-- <p>In sit amet sapien eros Integer dolore magna aliqua</p> -->	
 						</figcaption>			
 					</figure>
 				</div>
@@ -321,7 +132,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img class="img-responsive" src="images/z2.jpg" alt=""/>
 						<figcaption>
 							<h4>楼宇对讲</h4>
-							<!-- <p>In sit amet sapien eros Integer dolore magna aliqua</p> -->	
 						</figcaption>			
 					</figure>
 				</div>
@@ -330,7 +140,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img class="img-responsive" src="images/z3.jpg" alt=""/>
 						<figcaption>
 							<h4>火灾报警</h4>
-							<!-- <p>In sit amet sapien eros Integer dolore magna aliqua</p> -->	
 						</figcaption>			
 					</figure>
 				</div>
@@ -339,165 +148,62 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<!--about-end-->
+	<h2 style="width: 60%;margin-left: 12%;">新闻中心</h2>
+		<div class="news-about">
+			<h4 style="width: 80%;margin: 0 auto;">
+				尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。
+			</h4>
+		</div>
 	<!--product-starts-->
-	<!-- <div class="product"> 
+	<div class="product"> 
 		<div class="container">
 			<div class="product-top">
 				<div class="product-one">
 					<div class="col-md-3 product-left">
 						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-1.png" alt="" /></a>
+							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/22.jpg" alt="" /></a>
 							<div class="product-bottom">
-								<h3>Smart Watches</h3>
+								<h3>资讯1</h3>
 								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
+								<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 product-left">
 						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-2.png" alt="" /></a>
+							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/23.jpg" alt="" /></a>
 							<div class="product-bottom">
-								<h3>Smart Watches</h3>
+								<h3>资讯2</h3>
 								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
+								<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 product-left">
 						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-3.png"  alt="" /></a>
+							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/22.jpg"  alt="" /></a>
 							<div class="product-bottom">
-								<h3>Smart Watches</h3>
+								<h3>资讯3</h3>
 								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
+								<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 product-left">
 						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-4.png" alt="" /></a>
+							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/23.jpg" alt="" /></a>
 							<div class="product-bottom">
-								<h3>Smart Watches</h3>
+								<h3>资讯4</h3>
 								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
+								<h4><a class="item_add" href="#"></a> <span class=" item_price"></span></h4>
 							</div>
 						</div>
 					</div>
 					<div class="clearfix"></div>
-				</div>
-				<div class="product-one">
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-5.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-6.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-7.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 product-left">
-						<div class="product-main simpleCart_shelfItem">
-							<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-8.png" alt="" /></a>
-							<div class="product-bottom">
-								<h3>Smart Watches</h3>
-								<p>Explore Now</p>
-								<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-							</div>
-							<div class="srch">
-								<span>-50%</span>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>					
-			</div>
-		</div>
-	</div> -->
-	<!--product-end-->
-	<!-- News start -->
-	<div class="news" style="width:100%;height:400px;">
-		<h1>新闻中心</h1>
-		<div class="news-about">
-			<h3>
-				尙德股份公司是全国最大的低压电器经销商之一，于2016年完成股份制改制，在全国拥有销售网点18个，专业雇员160余名，其中80%以上是直接服务于客户，其三个核心销售市场是：工业、民用建设和非民用建设，2016年预计实现2.6亿人民币的销售收入，销售的产品包括智能电气设备、电线电缆、照明系统、安全和通信系统等7大类别产品，占有全国低压电器经销领域0.4%的市场份额。
-			</h3>
-		</div>
-		<div class="news-detail" >
-			<div class="container" style="width: 90%;height:200px;margin:0 auto">
-				<ul>
-					<li>
-						<a href="">
-							<img src="images/22.jpg" alt="">
-							<h4>资讯1</h4>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/23.jpg" alt="">
-							<h4>资讯2</h4>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/22.jpg" alt="">
-							<h4>资讯3</h4>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/24.jpg" alt="">
-							<h4>资讯4</h4>
-						</a>
-					</li>
-				</ul>
+				</div>				
 			</div>
 		</div>
 	</div>
-	<!-- News end -->
-	
 	<!--information-starts-->
 	<div class="information">
 		<div class="container">
@@ -547,10 +253,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="footer-top">
 				<div class="col-md-6 footer-left">
-					<!-- <form>
-						<input type="text" value="Enter Your Email" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Enter Your Email';}">
-						<input type="submit" value="Subscribe">
-					</form> -->
 				</div>
 				<div class="col-md-6 footer-right">					
 					<p>Copyright &copy; 尙德(北京)科技股份有限公司  版权所有<a target="_blank" href="http://www.cssmoban.com/"></a></p>
