--- a/News.html
+++ b/News.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>新闻资讯</title>
+<title>尙德资讯</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!--jQuery(necessary for Bootstrap's JavaScript plugins)-->
 <script src="js/jquery-1.11.0.min.js"></script>
@@ -11,8 +11,7 @@
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Luxury Watches Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content=" intelligence, intelligence, premises, entrance guard , 尙德, 科技, 智能, 楼宇, 门禁,engineering" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--start-menu-->
 <script src="js/simpleCart.min.js"> </script>
@@ -23,51 +22,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery.easydropdown.js"></script>			
 </head>
 <body> 
-	<!--top-header-->
-	<!-- <div class="top-header">
-		<div class="container">
-			<div class="top-header-main">
-				<div class="col-md-6 top-header-left">
-					<div class="drop">
-						<div class="box">
-							<select tabindex="4" class="dropdown drop">
-								<option value="" class="label">Dollar :</option>
-								<option value="1">Dollar</option>
-								<option value="2">Euro</option>
-							</select>
-						</div>
-						<div class="box1">
-							<select tabindex="4" class="dropdown">
-								<option value="" class="label">English :</option>
-								<option value="1">English</option>
-								<option value="2">French</option>
-								<option value="3">German</option>
-							</select>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-md-6 top-header-left">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							<div class="total">
-								<span class="simpleCart_total"></span></div>
-								<img src="images/cart-1.png" alt="" />
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div> -->
-	<!--top-header-->
-	<!--start-logo-->
-	<!-- <div class="logo">
-		<a href="index.html"><h1>Luxury Watches</h1></a>
-	</div> -->
-	<!--start-logo-->
 	<!--bottom-header-->
 	<div class="header-bottom">
 		<div class="container">
@@ -77,135 +31,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="memenu skyblue">
 					<li><a href="index.html" style="font-size: 36px;font-weight: bold;font-family: "隶书"">BDT-尙德</a></li>
 					<li class="active"><a href="index.html">首页</a></li>
-
 						<li class="grid"><a href="about.html">关于我们</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>		
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products.html">样板工程</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>品牌</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="products-2.html">产品</a>
-							<!-- <div class="mepanel">
-								<div class="row">
-									<div class="col1 me-one">
-										<h4>Shop</h4>
-										<ul>
-											<li><a href="products.html">New Arrivals</a></li>
-											<li><a href="products.html">Blazers</a></li>
-											<li><a href="products.html">Swem Wear</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Handbags</a></li>
-											<li><a href="products.html">T-Shirts</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">My Shopping Bag</a></li>
-										</ul>
-									</div>
-									<div class="col1 me-one">
-										<h4>Style Zone</h4>
-										<ul>
-											<li><a href="products.html">Shoes</a></li>
-											<li><a href="products.html">Watches</a></li>
-											<li><a href="products.html">Brands</a></li>
-											<li><a href="products.html">Coats</a></li>
-											<li><a href="products.html">Accessories</a></li>
-											<li><a href="products.html">Trousers</a></li>
-										</ul>	
-									</div>
-									<div class="col1 me-one">
-										<h4>Popular Brands</h4>
-										<ul>
-											<li><a href="products.html">499 Store</a></li>
-											<li><a href="products.html">Fastrack</a></li>
-											<li><a href="products.html">Casio</a></li>
-											<li><a href="products.html">Fossil</a></li>
-											<li><a href="products.html">Maxima</a></li>
-											<li><a href="products.html">Timex</a></li>
-											<li><a href="products.html">TomTom</a></li>
-											<li><a href="products.html">Titan</a></li>
-										</ul>	
-									</div>
-								</div>
-							</div> -->
 						</li>
 						<li class="grid"><a href="News.html">资讯</a>
 						</li>
@@ -215,12 +45,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<!-- <div class="col-md-3 header-right"> 
-				<div class="search-bar">
-					<input type="text" value="Search" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search';}">
-					<input type="submit" value="">
-				</div>
-			</div> -->
 			<div class="clearfix"> </div>
 			</div>
 		</div>
@@ -289,56 +113,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<strong>Oh snap!</strong>从尙德投资策略来讲，目标就是在当地取得市场排名第一或者第二的位置，如果在当地只是个微不足道的竞争者的话，那么这个对于尙德来将是丝毫没有意义的。同时，中国的文化、市场环境、消费习惯跟其它国家都有显著的差异，中国的普通消费者甚至低压电器行业的专业客户对尙德的品牌及实力不甚了解，尙德在中国的发展还面临着品牌推广的问题，需要通过不同的方式向中国的客户展示尙德的品牌实力和运营方式，培植客户对尙德的认知。从这二点看来，尙德在中国的现状离其战略目标还相差较远。
 			   </div>
 		    </div>
-		<!-- <div class="appearance"> -->
-			 <!-- <h3 class="ghj">Badges</h3>
-				<div class="col-md-6">
-					<p>Add modifier classes to change the appearance of a badge.</p>
-					  <table class="table table-bordered">
-						<thead>
-							<tr>
-								<th>Classes</th>
-								<th>Badges</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>No modifiers</td>
-								<td><span class="badge">42</span></td>
-							</tr>
-							<tr>
-								<td><code>.badge-primary</code></td>
-								<td><span class="badge badge-primary">1</span></td>
-							</tr>
-							<tr>
-								<td><code>.badge-success</code></td>
-								<td><span class="badge badge-success">22</span></td>
-							</tr>
-							<tr>
-								<td><code>.badge-info</code></td>
-								<td><span class="badge badge-info">30</span></td>
-							</tr>
-							<tr>
-								<td><code>.badge-warning</code></td>
-								<td><span class="badge badge-warning">412</span></td>
-							</tr>
-							<tr>
-								<td><code>.badge-danger</code></td>
-								<td><span class="badge badge-danger">999</span></td>
-							</tr>
-						</tbody>
-					</table>                    
-				</div>
-				<div class="col-md-6">
-				  <p>Easily highlight new or unread items with the <code>.badge</code> class</p>
-					<div class="list-group list-group-alternate"> 
-						<a href="#" class="list-group-item"><span class="badge">201</span> <i class="ti ti-email"></i> Inbox </a> 
-						<a href="#" class="list-group-item"><span class="badge badge-primary">5021</span> <i class="ti ti-eye"></i> Profile visits </a> 
-						<a href="#" class="list-group-item"><span class="badge">14</span> <i class="ti ti-headphone-alt"></i> Call </a> 
-						<a href="#" class="list-group-item"><span class="badge">20</span> <i class="ti ti-comments"></i> Messages </a> 
-						<a href="#" class="list-group-item"><span class="badge badge-warning">14</span> <i class="ti ti-bookmark"></i> Bookmarks </a> 
-						<a href="#" class="list-group-item"><span class="badge badge-danger">30</span> <i class="ti ti-bell"></i> Notifications </a> 
-					</div>
-			    </div> -->
 			   <div class="clearfix"> </div>
 			</div>
 			</div>
@@ -394,10 +168,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="footer-top">
 				<div class="col-md-6 footer-left">
-					<!-- <form>
-						<input type="text" value="Enter Your Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter Your Email';}">
-						<input type="submit" value="Subscribe">
-					</form> -->
 				</div>
 				<div class="col-md-6 footer-right">					
 					<p>Copyright &copy; 尙德(北京)科技股份有限公司  版权所有<a target="_blank" href="http://www.cssmoban.com/"></a></p>
